samples/_failures_safe/1761443304_56cc30_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d6ea5bf6.c: In function ‘main’:
./samples/SAFE/__tmp_d6ea5bf6.c:158:16: error: missing terminating " character
  158 |         printf("
      |                ^
./samples/SAFE/__tmp_d6ea5bf6.c:158:9: error: expected expression at end of input
  158 |         printf("
      |         ^~~~~~
./samples/SAFE/__tmp_d6ea5bf6.c:158:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d6ea5bf6.c:158:9: error: expected declaration or statement at end of input
